<resources>
    <string name="app_name">MyApp1</string>
    <string name="t1">Nombre de la Aplicación</string>

    //Login
    <string name="login">INICIAR SESION</string>
    <string name="edt_email">INGRESE SU CORREO</string>
    <string name="edt_pass">INGRESE SU CONTRASEÑA</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_gmail">CORREO GMAIL</string>
    <string name="btn_cuenta">CREAR CUENTA</string>

    //Crear cuenta
    <string name="create_count">CREAR CUENTA hola</string>
    <string name="edt_name">Ingrese su(s) nombre(s)</string>
    <string name="edt_sname">Ingrese su(s) apellido(s)</string>
    <string name="edt_email2">Ingrese su email</string>
    <string name="edt_pass2">Ingrese su contraseña</string>
    <string name="btn_reg">REGISTRAR</string>

</resources>