<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_count"
        android:textAlignment="center"
        android:textColor="@color/sena"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginBottom="30sp"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:srcCompat="@drawable/logo_sena"
        android:layout_marginBottom="40sp" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edt_name"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_marginBottom="10sp"/>

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edt_sname"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_marginBottom="10sp"/>

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edt_email2"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_marginBottom="10sp"/>

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40sp"
        android:ems="10"
        android:hint="@string/edt_pass2"
        android:inputType="text"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/sena"
        android:text="@string/btn_reg"
        android:textColorLink="@color/sena" />

</LinearLayout>